gramatica.txt
######## INFIXADA

<expr> ::= <term> <expr_tail>

<expr_tail> ::= '+' <term> <expr_tail>
        | '-' <term> <expr_tail>
        | ε

<term> ::= <factor> <term_tail>

<term_tail> ::= '*' <factor> <term_tail>
        | '/' <factor> <term_tail>
        | ε

<factor> ::= <number>
        | '(' <expr> ')'

<number> ::= <digit>
        | <digit> <number> 

<digit> ::= 0 | 1 | ... | 9
